# crosslink_monolith

./: Cargo.toml  LICENSE  README.md
.github/actions/cargo-checkmate/: action.yml
.github/actions/cargo-hack/: action.yml
.github/actions/cargo-shear/: action.yml
.github/workflows/: ci-nightly.yaml  ci-pr.yaml  test.yaml  trailing-whitespace.yaml
.zed/: debug.json
clay-rs/src/: lib.rs
librustzcash/components/zcash_protocol/src/: consensus.rs  constants.rs
librustzcash/zcash_client_sqlite/src/: wallet.rs
librustzcash/zcash_client_sqlite/src/wallet/init/migrations/: tx_retrieval_queue.rs
librustzcash/zcash_primitives/src/transaction/: sighash_v5.rs  sighash_vcrosslink.rs  tests.rs  txid.rs
tenderlink/: .gitignore  Cargo.toml  tenderlink.10x  tenderlink.sln  tenderlink.vcxproj  tenderlink_1.vcxproj
tenderlink/src/: lib.rs  main.rs
utils/: check_package.sh
zaino/: Cargo.toml
zaino/zaino-common/src/config/: network.rs  service.rs  storage.rs
zaino/zaino-fetch/src/chain/: block.rs  transaction.rs
zaino/zaino-proto/src/proto/: service.rs
zaino/zaino-serve/: build.rs
zaino/zaino-serve/src/server/: config.rs
zaino/zaino-state/src/: config.rs
zaino/zainod/: zindexer.toml
zaino/zainod/src/: config.rs
zcash_client_sqlite/src/wallet/: init.rs
zcash_local_net/: Cargo.toml  README.md
zcash_local_net/src/: config.rs  lib.rs  logs.rs  network.rs  utils.rs  validator.rs
zcash_local_net/src/indexer/: zainod.rs
zcash_local_net/src/utils/: executable_finder.rs
zcash_local_net/src/validator/: zcashd.rs
zcash_primitives/: Cargo.toml
zcash_primitives/src/transaction/: builder.rs  mod.rs  sighash.rs
zcash_primitives/src/transaction/components/: orchard.rs
zebra-crosslink/: Cargo.toml
zebra-crosslink/wallet/: Cargo.toml
zebra-crosslink/wallet/src/: lib.rs
zebra-crosslink/zebra-chain/src/: transaction.rs  transparent.rs
zebra-crosslink/zebra-chain/src/parameters/: network.rs
zebra-crosslink/zebra-crosslink/: Cargo.toml
zebra-crosslink/zebra-crosslink/src/: lib.rs  viz2.rs
zebra-crosslink/zebra-crosslink/wallet/: Cargo.toml
zebra-crosslink/zebra-crosslink/wallet/src/: lib.rs
zebra-crosslink/zebra-state/src/: tests.rs
zebra-crosslink/zebrad/: Cargo.toml
zebra-crosslink/zebrad/src/: application.rs
zebra-crosslink/zebrad/src/commands/: start.rs
zebra-gui/: .gitignore  Cargo.toml  visualizer_zcash.10x  visualizer_zcash.sln  visualizer_zcash.vcxproj
zebra-gui/src/: lib.rs  main.rs  ui.rs  viz_gui.rs
zingo-infrastructure/: Cargo.toml
zingo-infrastructure/.config/: nextest.toml
zingo-infrastructure/.github/workflows/: cargo-checkmate.yaml  ci-nightly.yaml
zingo-infrastructure/zcash_local_net/src/: indexer.rs  launch.rs  process.rs
zingo-infrastructure/zcash_local_net/src/indexer/: empty.rs  lightwalletd.rs
zingo-infrastructure/zcash_local_net/src/validator/: zebrad.rs
zingo-infrastructure/zcash_local_net/tests/: integration.rs  testutils.rs
zingo_common_components/: Cargo.toml
zingo_common_components/src/: protocol.rs
zingo_common_components/src/protocol/: activation_heights.rs
zingo_common_components/src/protocol/activation_heights/: for_test.rs
zingo_netutils/: Cargo.toml
zingo_netutils/src/: lib.rs
zingo_test_vectors/: Cargo.toml
zingo_test_vectors/src/: lib.rs
