[package]
name = "tenderlink"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0            # no optimizations
debug = 2   # full debug info (0 = none, 1 = line tables only, 2 = full)
debug-assertions = true
overflow-checks = true
incremental = false      # incremental confuses symbol mapping
codegen-units = 1        # easier to debug single unit
split-debuginfo = "unpacked"  # produce separate .pdb files
lto = false

[dependencies]
blake3 = "1.8.2"
byteorder = "1.5.0"
ed25519-zebra = "4.1.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_pcg = "0.9.0"
snow = { version = "0.10.0", default-features = false, features = ["use-curve25519", "use-chacha20poly1305", "use-blake2", "use-getrandom"] }
socket2 = "0.6.1"
static_assertions = "1.1.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "net", "time"] }
