[package]
name = "zcash_local_net"
version = "0.1.0"
edition = "2021"
license = "MIT License"

[badges]
github = { repository = "zingolabs/infrastructure/services" }

[dependencies]

# zingo
zingo_common_components = { git = "https://github.com/zingolabs/zingo-common.git", branch = "dev", features = [ "for_test" ]}
zingo_test_vectors = { workspace = true }

# zcash
zcash_protocol = { version = "0.7", features = [
    "local-consensus",
] }

# zebra
zebra-node-services = { workspace = true }
zebra-rpc = { workspace = true }
zebra-chain = { workspace = true }

# Community
tempfile = { workspace = true }
portpicker = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
getset = { workspace = true }
json = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }


[build-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }
