[workspace]
members = ["zcash_local_net", "zingo_test_vectors"]
resolver = "2"

[workspace.dependencies]

# workspace
zingo_test_vectors = { path = "zingo_test_vectors" }

# zebra
zebra-chain = "3.0"
zebra-node-services = "2.0"
zebra-rpc = "3.0"

# other
http = "1.1.0"
getset = "0.1.3"
hex = "0.4.3"
json = "0.12.4"
portpicker = "0.1.1"
serde_json = "1.0.132"
tempfile = "3.13.0"
thiserror = "1.0.64"
tokio = "1.42.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.15"
