[package]
name = "zingo_test_vectors"
description = "A crate that provides access to Zingo testvectors."
version = "0.0.1"
edition = "2024"
authors = ["Zingolabs <zingo@zingolabs.org>"]
repository = "https://github.com/zingolabs/zingolib"
homepage = "https://github.com/zingolabs/zingolib"
license = "MIT"

[dependencies]
bip0039 = "0.12.0"
