[package]
name = "wallet"
version = "1.0.0-beta.1"
edition = "2021"

[dependencies]
bip39 = "2.2.0"

zcash_primitives = { workspace = true } # version = "0.26.1"
zcash_client_backend = { path = "../../librustzcash/zcash_client_backend", features = ["lightwalletd-tonic"] } # version = "0.21.0"
zcash_client_sqlite = { path = "../../librustzcash/zcash_client_sqlite", features = ["orchard"] } # version = "0.19.0"
zcash_keys = { workspace = true, features=["transparent-inputs"] }
zcash_protocol = { workspace = true } # version = "0.7.1"
zcash_transparent = { workspace = true } # version = "0.6.1"
zcash_note_encryption = { workspace = true } # version = "0.4.1"

prost = "0.13"
tonic = { version = "0.13", default-features = false, features = ["transport", "channel", "tls-ring", "tls-webpki-roots", "prost"] }
tonic-build = { version = "0.13", default-features = false }
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros", "tracing", "signal"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { workspace = true, features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls"] }

secrecy = "0.8.0"
sapling-crypto = "0.5.0"
orchard = "0.11.0"
